--- a/package.json
+++ b/package.json
@@ -19,22 +19,26 @@
         "pixelate": "node utils/pixelate.js",
         "update_info": "node utils/update_info.js",
         "preview_gif": "node utils/preview_gif.js",
-        "generate_metadata": "node utils/generate_metadata.js"
+        "generate_metadata": "node utils/generate_metadata.js",
+        "upload_file": "node utils/upload_files.js",
+        "upload_metadata": "node utils/upload_metadata.js"
     },
     "author": "Daniel Eugene Botha (HashLips)",
     "license": "MIT",
     "dependencies": {
         "@openzeppelin/contracts": "^4.6.0",
         "async-sema": "^3.1.1",
-        "form-data": "^4.0.0",
         "canvas": "^2.8.0",
         "express": "^4.18.1",
+        "form-data": "^4.0.0",
         "gif-encoder-2": "^1.0.5",
         "ipfs-core": "^0.14.3",
-        "xhr2": "^0.2.1",
+        "npm": "^8.9.0",
         "sha1": "^1.1.1",
         "solc": "^0.8.13",
-        "web3": "^1.7.3"
+        "uint8arrays": "^3.0.0",
+        "web3": "^1.7.3",
+        "xhr2": "^0.2.1"
     },
     "devDependencies": {
         "@nomiclabs/buidler": "^1.4.8"
