--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@openzeppelin/contracts": "^4.6.0",
         "async-sema": "^3.1.1",
         "canvas": "^2.8.0",
+        "dotenv": "^16.0.0",
         "express": "^4.18.1",
         "form-data": "^4.0.0",
         "gif-encoder-2": "^1.0.5",
