--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "license": "MIT",
     "dependencies": {
         "@openzeppelin/contracts": "^4.6.0",
+        "@truffle/hdwallet-provider": "^2.0.8",
         "async-sema": "^3.1.1",
         "canvas": "^2.8.0",
         "dotenv": "^16.0.0",
