--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "canvas": "^2.8.0",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
+        "find-config": "^1.0.0",
         "form-data": "^4.0.0",
         "gif-encoder-2": "^1.0.5",
         "ipfs-core": "^0.14.3",
