--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "hashlips_art_engine",
+    "name": "rocket_elevators_blockchain",
     "version": "1.1.1",
-    "description": "HashLips Art Engine is a tool used to create multiple different instances of artworks based on provided layers.",
-    "main": "index.js",
-    "bin": "index.js",
+    "description": "This is the Rocket Elevators NFT project.",
+    "main": "app.js",
+    "bin": "app.js",
     "pkg": {
         "assets": [
             "layers/**/*",
