--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@truffle/hdwallet-provider": "^2.0.8",
         "async-sema": "^3.1.1",
         "canvas": "^2.8.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
         "find-config": "^1.0.0",
